# Expr-JIT

./: .gitattributes  CMakeLists.txt
.github/workflows/: build-sanitizer.yml
Test/: main.c
cmake/: FindASan.cmake  FindUBSan.cmake
src/: CMakeLists.txt  expr jit.c  expr jit.h  exprjit.c  exprjit.h  jit.c  jit.dasc  jit_amd64.c  jit_amd64.dasc  jit_arm64.c  jit_arm64.dasc  tinyexpr-compat.h
test/: benchmark.c  cli.c  main.c  smoke.c
